--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,23 @@
+.app {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	grid-template-rows: 20% 1fr;
+}
+
+.ui-header {
+	grid-column: 1 / span 2;
+}
+
+.ui-form {
+	display: inline-grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 100px;
+	width: 1280px;
+	grid-column: 1 / span 2;
+}
+
 .ui-form-element {
-	display: block;
+	grid-column: 1 / span 1;
 	padding: 5px;
 }
 
@@ -14,11 +32,17 @@
 	vertical-align: middle;
 }
 
-.ui-form select {
+.ui-wave-parameters {
+	margin: 5px;
+}
+
+.app select {
 	display: block;
 	margin: 5px;
 }
 
-.ui-wave-parameters {
-	margin: 5px;
+.ui-controls {
+	border-style: solid;
+	border-width: 2px;
+	background-color: #ffe6b3;
 }
