--- a/src/components/CanvasArea.css
+++ b/src/components/CanvasArea.css
@@ -1,5 +1,11 @@
 .canvas-root {
 	border-style: solid;
 	border-width: 2px;
+	width: 1280px;
 	height: 720px;
+	overflow: scroll;
+}
+
+canvas {
+	height: 100%;
 }
